--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
+    "cookie": "^0.4.2",
+    "crypto-js": "^4.1.1",
     "fs": "0.0.1-security",
+    "js-cookie": "^3.0.1",
     "net": "^1.0.2",
     "next": "^12.1.0",
+    "next-cookies": "^2.0.3",
     "react": "^17.0.2",
+    "react-cookies": "^0.1.1",
     "react-dom": "^17.0.2",
     "serverless-mysql": "^1.5.4",
     "tls": "0.0.1"
