--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hapi/iron": "^6.0.0",
     "axios": "^0.26.1",
     "cookie": "^0.4.2",
+    "crypto": "^1.0.1",
     "crypto-js": "^4.1.1",
     "fs": "0.0.1-security",
     "js-cookie": "^3.0.1",
+    "moment": "^2.29.1",
     "net": "^1.0.2",
     "next": "^12.1.0",
     "next-cookies": "^2.0.3",
@@ -21,7 +24,8 @@
     "react-cookies": "^0.1.1",
     "react-dom": "^17.0.2",
     "serverless-mysql": "^1.5.4",
-    "tls": "0.0.1"
+    "tls": "0.0.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
