--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-cookies": "^0.1.1",
     "react-dom": "^17.0.2",
     "serverless-mysql": "^1.5.4",
+    "swr": "^1.2.2",
     "tls": "0.0.1",
     "uuid": "^8.3.2"
   },
