--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "moment": "^2.29.1",
     "net": "^1.0.2",
     "next": "^12.1.0",
+    "next-auth": "^4.3.1",
+    "next-auth-client": "^1.5.0",
     "next-cookies": "^2.0.3",
     "react": "^17.0.2",
     "react-cookies": "^0.1.1",
