--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^17.0.2",
     "serverless-mysql": "^1.5.4",
     "swr": "^1.2.2",
+    "tailwind-scrollbar": "^1.3.1",
     "tls": "0.0.1",
     "uuid": "^8.3.2"
   },
