--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "serverless-mysql": "^1.5.4",
     "swr": "^1.2.2",
     "tailwind-scrollbar": "^1.3.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tls": "0.0.1",
     "uuid": "^8.3.2"
   },
